# jname

./: .gitignore  Cargo.toml  README.md  jname  jrename.sh
src/: entrada.rs  lib.rs  main.rs
